--- a/v2/patrodent/templates/atm.html
+++ b/v2/patrodent/templates/atm.html
@@ -1,10 +1,14 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}ATM, ATM en Sevilla, dolor articular, chasquido articular, disfuncion mandibular, ferula de descarga{% endblock %}
+
+{% block metadescription %}La articulación temporomandibular es el medio de unión de la mandíbula con el craneo{% endblock %}
+
 {% block content-title %}Problemas de articulación (ATM){% endblock %}
 
 {% block content-body %}
     <p>
-        Es el medio de unión de la mandíbula con el craneo. Todos los procesos que aumentan la presión dentro de la ATM, el bruxismo, apretar y rechinar los dientes o sobrecargas masticatorias, pueden ocasionar deformaciones del hueso, destrucción del disco o lesión de los ligamentos que forman parte de la ATM. La degeneración mantenida de la ATM origina su artrosis y el Síndrome de Disfunción Cráneo-Mandibular.
+        Es el medio de unión de la <strong>mandíbula</strong> con el craneo. Todos los procesos que aumentan la presión dentro de la <strong>ATM</strong>, el <strong>bruxismo</strong>, apretar y <strong>rechinar</strong> los dientes o sobrecargas masticatorias, pueden ocasionar deformaciones del hueso, destrucción del disco o lesión de los ligamentos que forman parte de la <strong>ATM</strong>. La degeneración mantenida de la <strong>ATM</strong> origina su artrosis y el Síndrome de Disfunción Cráneo-Mandibular.
 
     </p>
     <p>
@@ -18,13 +22,13 @@
         </ul>
     </p>
     <p>
-        Una vez que ha aparecido la sintomatología se ha de hacer un diagnóstico correcto por medio de exploración, radiografías y Resonancia Magnética, para averiguar la causa que la origina. Existen diversos tratamientos en función del origen de la disfunción:Placas de descarga, tratamiento ortodoncico, rehabilitacion protésica y cirugía
+        Una vez que ha aparecido la sintomatología se ha de hacer un diagnóstico correcto por medio de <strong>exploración</strong>, <strong>radiografías</strong> y <strong>Resonancia Magnética</strong>, para averiguar la causa que la origina. Existen diversos tratamientos en función del origen de la disfunción: <strong>Ferula de descarga</strong>, <strong>tratamiento ortodoncico</strong>, <strong>rehabilitacion protésica</strong> y <strong>cirugía</strong>.
     </p>
     <p>
-        En muchos casos un simple balanceo de la mordida (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga
+        En muchos casos un simple <strong>balanceo de la mordida</strong> (ajuste oclusal) puede dar un descanso inmediato. El método mas usado para conseguir esta relajación inmediata es la férula de descarga
     </p>
     <p>
-        Placa de descarga: Consiste en una férula de resina de “quita y pon” que se adapta y estabiliza en los dientes de la arcada superior. Con ella se estabiliza la mordida, se descarga la tensión muscular y el dolor, evitando un mayor desgaste de los dientes por el efecto de apretarlos. Generalmente se usa por la noche, para dormir, aunque en algunos casos puede usarse de día.
+        Placa de descarga: Consiste en una <strong>férula de resina</strong> de “quita y pon” que se adapta y estabiliza en los dientes de la arcada superior. Con ella se estabiliza la mordida, se descarga la tensión muscular y el dolor, evitando un mayor desgaste de los dientes por el efecto de apretarlos. Generalmente se usa por la noche, para dormir, aunque en algunos casos puede usarse de día.
     </p>
 {% endblock %}
 
