--- a/v2/patrodent/templates/estetica.html
+++ b/v2/patrodent/templates/estetica.html
@@ -1,20 +1,25 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}Estética dental, Estética dental Sevilla, Blanqueamiento dental, Blanqueamiento dental Sevilla, empastes esteticos, fundas de porcelana{% endblock %}
+
+{% block metadescription %}La Odontología Estética se encarga de tratar todas aquellas alteraciones y patologías de la morfología bucodental para lograr un canon de belleza{% endblock %}
+
+
 {% block content-title %}Estética dental y blanqueamiento{% endblock %}
 
 {% block content-body %}
     <p>
-        La Odontología Estética se encarga de tratar todas aquellas alteraciones y patologías de la morfología bucodental para lograr un canon de belleza que se ajuste al ideal social de hoy en dia.
+        La <strong>Odontología Estética</strong> se encarga de tratar todas aquellas alteraciones y patologías de la morfología bucodental para lograr un canon de <strong>belleza</strong> que se ajuste al ideal social de hoy en dia.
 
     </p>
     <p>
-        En este contexto, una sonrisa clara y perfecta se ha convertido en un requisito esencial, donde dientes blancos, saludables y alineados son referenciales de una persona atractiva
+        En este contexto, una sonrisa clara y perfecta se ha convertido en un requisito esencial, donde <strong>dientes blancos</strong>, saludables y <strong>alineados</strong> son referenciales de una <strong>persona atractiva</strong>.
     </p>
     <p>
         No obstante, más que un mero caso estético, el estado de nuestra boca es una cuestión de salud, al cual debemos estar atentos, por lo que elegimos el material mas adecuado para cada caso en particular.
     </p>
     <p>
-        Técnica progresiva en composites (empastes esteticos) asi como las <strong>fundas de porcelana</strong>, el <strong>blanqueamiento dental</strong>, injertos y estética de encías y la <strong>ortodoncia</strong> han sufrido una gran evolución principalmente orientada hacia la estética, para satisfacer las demandas actuales de la población.
+        Técnica progresiva en composites (<strong>empastes esteticos</strong>) asi como las <strong>fundas de porcelana</strong>, el <strong>blanqueamiento dental</strong>, injertos y estética de encías y la <strong>ortodoncia</strong> han sufrido una gran evolución principalmente orientada hacia la estética, para satisfacer las demandas actuales de la población.
 
     </p>
     <p>
