--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -1,18 +1,23 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}Implantes, Implantes Sevilla, protesis fija, coronas, cerámica{% endblock %}
+
+{% block metadescription %}Los implantes son la manera más natural de sustituir dientes perdidos.{% endblock %}
+
+
 {% block content-title %}Implantes{% endblock %}
 
 {% block content-body %}
     <p>
-        Es la manera más natural de sustituir dientes perdidos. Los implantes dentales son fijaciones de titanio que se colocan en el maxilar o en la mandíbula para sustituir los dientes ausentes.
+        Es la manera más natural de sustituir <strong>dientes perdidos</strong>. Los <strong>implantes dentales</strong> son fijaciones de <strong>titanio</strong> que se colocan en el maxilar o en la mandíbula para sustituir los <strong>dientes ausentes</strong>.
     </p>
     <p>
-        Los implantes se intentan colocar en donde estaban las raíces de los dientes (son raíces artificiales). Sobre ellos colocaremos las coronas de cerámica para imitar los dientes naturales. De esta forma no tocamos los dientes vecinos a la zona desdentada con puentes convencionales, ni tenemos los inconvenientes de las prótesis removibles. Con los implantes dentales podemos sustituir desde dientes aislados hasta arcadas completamente desdentadas.
+        Los <strong>implantes</strong> se intentan colocar en donde estaban las raíces de los dientes (son raíces artificiales). Sobre ellos colocaremos las <strong>coronas de cerámica</strong> para imitar los dientes naturales. De esta forma no tocamos los dientes vecinos a la zona desdentada con puentes convencionales, ni tenemos los inconvenientes de las prótesis removibles. Con los implantes dentales podemos sustituir desde dientes aislados hasta arcadas completamente desdentadas.
     </p>
     <p>
         A veces se puede aprovechar el mismo momento de la extracción del diente deteriorado para colocar el implante en la misma sesión y así se evita el tener que realizar una segunda intervención. Los implantes colocados de esta manera se les denomina implantes inmediatos.
     </p>
-    <p>Este procedimiento se realiza bajo anestesia local (sin pérdida del conocimiento). La colocación de implantes no es dolorosa. En algunos casos puede generarse una pequeña inflamación de la zona que suele remitir en 24-48 horas.
+    <p>Este procedimiento se realiza bajo <strong>anestesia local</strong> (sin pérdida del conocimiento). La colocación de implantes no es dolorosa. En algunos casos puede generarse una pequeña inflamación de la zona que suele remitir en <strong>24-48 horas</strong>.
     </p>
 {% endblock %}
 
