--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -1,13 +1,17 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}Odontología general, Odontología general en Sevilla, endodoncia, endodoncia Sevilla, quitar el nervio, matar el nervio, desvitalizar, Odontopediatría: Pulpotomía, tratamientos infantiles, control de habitos, logopedia{% endblock %}
+
+{% block metadescription %}La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales{% endblock %}
+
 {% block content-title %}Odontología General - Endodoncia{% endblock %}
 
 {% block content-body %}
    <p>
-       La odontología conservadora y restauradora nos permite prevenir, detener y curar las caries dentales. La caries dental puede afectar levemente a la estructura dentaria, destruyendo únicamente el esmalte o progresar a estadios mas graves, invadiendo tejidos más profundos como son la dentina o la pulpa dental. El objetivo de la odontología conservadora es la reparación de los dientes dañados por caries, fracturas, traumatismos o erosiones mediante su reconstrucción . Para que se produzca una caries se necesitan 3 factores: Dientes susceptibles de carearse, azúcar en la dieta y bacterias cariogénicas.
+       La <strong>odontología conservadora y restauradora</strong> nos permite prevenir, detener y curar las <strong>caries</strong> dentales. La <strong>caries</strong> dental puede afectar levemente a la estructura dentaria, destruyendo únicamente el esmalte o progresar a estadios mas graves, invadiendo tejidos más profundos como son la dentina o la pulpa dental. El objetivo de la <strong>odontología conservadora</strong> es la reparación de los dientes dañados por <strong>caries</strong>, <strong>fracturas</strong>, <strong>traumatismos</strong> o <strong>erosiones mediante su reconstrucción</strong>. Para que se produzca una caries se necesitan 3 factores: Dientes susceptibles de carearse, azúcar en la dieta y bacterias cariogénicas.
     </p>
    <p>
-        En principio cuando el proceso es incipiente no presenta síntomas, pero, a medida que avanza y se aproxima al nervio, provoca sensibilidad al frío, posteriormente al calor, y acaba transformándose en dolor. Cuando el nervio está inflamado hablamos de pulpitis. Si el nervio no ha quedado afectado, el tratamiento adecuado es una obturación o reconstrucción, dependiendo de la magnitud de la caries. Si la caries ya ha llegado al nervio (pulpitis), hay que endodonciar la pieza dentaria afectada, que es lo que comúnmente llamamos “matar el nervio” (endodoncia). 
+        En principio cuando el proceso es incipiente no presenta síntomas, pero, a medida que avanza y se aproxima al <strong>nervio</strong>, provoca sensibilidad al frío, posteriormente al calor, y acaba transformándose en dolor. Cuando el nervio está inflamado hablamos de <strong>pulpitis</strong>. Si el nervio no ha quedado afectado, el tratamiento adecuado es una <strong>obturación o reconstrucción</strong>, dependiendo de la magnitud de la caries. Si la caries ya ha llegado al nervio (pulpitis), hay que <strong>endodonciar</strong> la pieza dentaria afectada, que es lo que comúnmente llamamos <strong>“matar el nervio” (endodoncia)</strong>. 
     </p>
    <p>
         Para prevenir la caries se ha de acutar a diferentes niveles:
@@ -18,7 +22,7 @@
         </ol>
     </p>
     <p>
-        Hay que acudir periódicamente al dentista para someterse a revisiones. De este modo las caries se pueden detectar en estado precoz y los tratamientos son menos agresivos.
+        Hay que acudir <strong>periódicamente</strong> al dentista para someterse a revisiones. De este modo las caries se pueden detectar en estado precoz y los tratamientos son menos agresivos.
     </p>
 {% endblock %}
 
