--- a/v2/patrodent/templates/odontopediatria.html
+++ b/v2/patrodent/templates/odontopediatria.html
@@ -5,15 +5,19 @@
 {% block js-after-before %}
 {% endblock %}
 
+{% block keywords %}Odontopediatría, Odontopediatría Sevilla, tratamientos infantiles, control de habitos, logopedia{% endblock %}
+
+{% block metadescription %}Odontología Pediátrica en tres grupos: Prevención, Odontopediatría y Ortodoncia infantil{% endblock %}
+
 {% block content-body %}
    <p>
-        Nuestra clínica está adaptada para atender las necesidades de los más pequeños: dibujos animados, videos ilustrativos para todas las edades etc, para que los niños adquieran un hábito de higiene dental y acudan a las revisiones periódicas sin tener miedo al dentista. Es fundamental que acudan desde pequeños para que conozcan el ambiente y les resulte familiar. Esto sin duda les motivará lo suficiente como para no tener rechazo en posteriores revisiones o tratamientos.
+        Nuestra clínica está adaptada para atender las necesidades de los más <strong>pequeños</strong>: dibujos animados, videos ilustrativos para todas las edades etc, para que los niños adquieran un <strong>hábito de higiene dental</strong> y acudan a las revisiones periódicas <strong>sin tener miedo al dentista</strong>. Es fundamental que acudan desde pequeños para que conozcan el ambiente y les resulte familiar. Esto sin duda les motivará lo suficiente como para no tener rechazo en posteriores revisiones o tratamientos.
     </p>
    <p>
-        Por otro lado, en los casos en los que los padres tengan cierto miedo, es muy importante que no lo transmitan a sus hijos evitando realizar cometarios negativos delante de ellos. Podemos segmentar la Odontología Pediátrica en tres grupos: Prevención, Odontopediatría y Ortodoncia infantil.
+        Por otro lado, en los casos en los que los padres tengan cierto miedo, es muy importante que no lo transmitan a sus hijos evitando realizar cometarios negativos delante de ellos. Podemos segmentar la <strong>Odontología Pediátrica</strong> en tres grupos: <strong>Prevención</strong>, <strong>Odontopediatría</strong> y <strong>Ortodoncia infantil</strong>.
     </p>
    <p>
-        Nuestro objetivo se centra fundamentalmente en interceptar y eliminar caries y en mantener y asegurar la calidad de las piezas dentales. Ya desde muy pequeño, un niño puede estar afectado por caries y de no resolverse a tiempo podrá tener patologías más agresivas llegando incluso a sufrir la pérdida de piezas dentarias. Igualmente le realizamos revisiones periódicas de evolución de su crecimiento y erupción dentaria para prevenir cualquier problema ortodoncico. Pertenecemos al plan de salud bucodental de la Junta de Andalucia.
+        Nuestro <strong>objetivo</strong> se centra fundamentalmente en <strong>interceptar y eliminar caries</strong> y en mantener y asegurar la calidad de las piezas dentales. Ya desde muy pequeño, un niño puede estar afectado por caries y de no resolverse a tiempo podrá tener patologías más agresivas llegando incluso a sufrir la pérdida de piezas dentarias. Igualmente le realizamos revisiones periódicas de evolución de su crecimiento y erupción dentaria para prevenir cualquier problema ortodoncico. <strong>Pertenecemos al plan de salud bucodental de la Junta de Andalucia</strong>.
     </p>
 {% endblock %}
 
