--- a/v2/patrodent/templates/protesis.html
+++ b/v2/patrodent/templates/protesis.html
@@ -1,19 +1,24 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}Protesis, Protesis Sevilla, Protesis fija, protesis removible, protesis esquelética, protesis parcial, protesis completa, coronas, fundas de porcelana{% endblock %}
+
+{% block metadescription %}La reposición de los dientes perdidos se hace mediante prótesis.{% endblock %}
+
+
 {% block content-title %}Protesis{% endblock %}
 
 {% block content-body %}
     <p>
-        Perdemos dientes por diversas causas, ya sea por caries, enfermedad periodontal, traumatismos, etc. Su pérdida produce varias consecuencias: Atrofia ósea ,inclinaciones dentarias, perdida de puntos de contacto, alteración del plano oclusal, sobrecarga de los dientes remanenetes y problemas en la articulación temporomandibular.
+        Perdemos dientes por diversas causas, ya sea por <strong>caries</strong>, <strong>enfermedad periodontal</strong>, <strong>traumatismos</strong>, etc. Su pérdida produce varias consecuencias: <strong>Atrofia ósea</strong>, <strong>inclinaciones dentarias</strong>, <strong>perdida de puntos de contacto</strong>, <strong>alteración del plano oclusal</strong>, <strong>sobrecarga de los dientes remanenetes</strong> y <strong>problemas en la articulación temporomandibular</strong>.
     </p>
     <p>
         El correcto funcionamiento de las piezas dentarias favorece la conservación del hueso que las rodea. Por ello es importante su reposición.
     </p>
     <p>
-       La reposición de los dientes perdidos se hace mediante prótesis. Las prótesis pueden ser unitarias (un solo diente), parciales (varios dientes) y completas (todos los dientes). Asimismo esta puede ser removible (“de quita y pon”): Esqueléticos y prótesis parciales o completas de resina, o puede ser fija y apoyarse sobre los dientes remanentes (puentes) o sobre implantes.
+       La reposición de los <strong>dientes perdidos</strong> se hace mediante <strong>prótesis</strong>. Las <strong>prótesis</strong> pueden ser <strong>unitarias</strong> (un solo diente), <strong>parciales</strong> (varios dientes) y <strong>completas</strong> (todos los dientes). Asimismo esta puede ser <strong>removible</strong> (“de quita y pon”): <strong>Esqueléticos</strong> y <strong>prótesis parciales</strong> o <strong>completas de resina</strong>, o <strong>puede ser fija</strong> y apoyarse sobre los dientes remanentes (puentes) o sobre implantes.
     </p>
     <p>
-       También puede reponerse el volumen óseo perdido por la atrofia debida a la ausencia de dientes.
+       También puede reponerse el volumen óseo perdido por la <strong>atrofia</strong> debida a la ausencia de dientes.
     </p>
 {% endblock %}
 
