--- a/v2/patrodent/templates/radiologia.html
+++ b/v2/patrodent/templates/radiologia.html
@@ -1,5 +1,9 @@
 {% extends "templates/servicio.html" %}
 
+{% block keywords %}Radiología Digital, Radiología Digital en Sevilla, radiologia 2D, radiologia 3D, panorex, radiografía panorámica, radiografía intraoral, teleradiografía, radiografía de la mano, radiografía carpal{% endblock %}
+
+{% block metadescription %}La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.{% endblock %}
+
 {% block content-title %}Radiología Digital{% endblock %}
 
 {% block js-after-before %}
@@ -7,13 +11,13 @@
 
 {% block content-body %}
    <p>
-        Nuestra clinica tiene entre sus instalaciones, el departamento de radiología dental en el que se pueden hacer tanto ortopantomografias (radiografías de toda la boca de frente) como teleradiografías (radiografías de cráneo laterales, necesarias sobretodo en ortodoncia), radiografías carpales (de la mano) para evolución del crecimiento y todo tipo de radiología intraoral.
+        Nuestra clinica tiene entre sus instalaciones, el departamento de <strong>radiología dental</strong> en el que se pueden hacer tanto <strong>ortopantomografias</strong> (<strong>radiografías</strong> de toda la boca de frente) como <strong>teleradiografías</strong> (radiografías de cráneo laterales, necesarias sobretodo en ortodoncia), <strong>radiografías carpales</strong> (de la mano) para evolución del crecimiento y todo tipo de radiología intraoral.
     </p>
    <p>
-        La radiología digital nos permite obtener radiografías en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.
+        La <strong>radiología digital</strong> nos permite obtener <strong>radiografías</strong> en menor tiempo y reducir en un 80% la dosis de radiación que reciben nuestros pacientes.
     </p>
    <p>
-        Actualmente estamos realizando el diagnóstico para implantes con radioloǵia 3D (en tres dimensiones), tecnología de última generación en la Tomografía Volumétrica Digital de haz cónico (CBCT – Cone Beam Computed Tomography), una modalidad de alto valor diagnóstico que ofrece representaciones tridimensionales precisas y de alta calidad de los elementos óseos en el complejo maxilofacial, dando comienzo así a una nueva dimensión del radiodiagnóstico.
+        Actualmente estamos realizando el diagnóstico para implantes con <strong>radioloǵia 3D</strong> (en tres dimensiones), tecnología de última generación en la Tomografía Volumétrica Digital de haz cónico (CBCT – Cone Beam Computed Tomography), una modalidad de alto valor diagnóstico que ofrece representaciones tridimensionales precisas y de alta calidad de los elementos óseos en el complejo maxilofacial, dando comienzo así a una nueva dimensión del radiodiagnóstico.
     </p>
 {% endblock %}
 
